--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -3,6 +3,7 @@ body {
     font-size: 1.4rem;
 }
 nav {
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -29,9 +30,13 @@ nav ul li {
     padding: 3px;
 }
 
+img {
+    width: 100%;
+}
+
 nav img {
     margin: 4px;
-    width: 100%;
+    width: 100px;
 }
 
 .li-nav-items {
@@ -41,20 +46,23 @@ nav img {
     align-items: center;
 }
 
-header {
-    display: flex;
-    min-height: 80vh;
-    /*Relative to 1% of the height of the view*/
-    background: url("../img/Sunset.jpg");
-    justify-content: center;
-    align-items: flex-start;
-    background-size: cover;
-}
-
 p {
     margin-bottom: 1.5rem;
     line-height: 1.4rem;
     color: #333;
+}
+
+ /* HEADER */
+header {
+    display: flex;
+    min-height: 80vh;
+    /*Relative to 1% of the height of the viewport.
+    Viewport = the browser window size. If the viewport is 50cm wide,
+    80vh = 40cm*/
+    background: url("../img/Sunset.jpg");
+    justify-content: center;
+    align-items: flex-start;
+    background-size: cover;
 }
 
 .header-content h1 {
@@ -83,6 +91,140 @@ p {
     margin: 40px;
 }
 
+/* MAIN CONTENT */
+.container-flex {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto; /* center content in your container, i.e. flex container */
+    max-width: 1900px;
+}
 
+main {
+    padding: 10px;
+}
 
+.post-content {
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+}
 
+.post-info {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    color: #14213d;
+}
+
+.post-author {
+    margin: 10px;
+}
+
+aside {
+    padding: 10px;
+}
+
+.about-me {
+    padding: 10px;
+    text-align: center;
+    box-shadow: 0px 1px 1px rgba(0,0,0,0.3);
+}
+
+.about-me img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin: 0 auto;
+}
+
+.post-content h1 {
+    font-size: 2.8rem;
+    font-weight: bold;
+    margin-bottom: 20px;
+    color: #14213d;
+}
+
+.about {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+footer {
+    background-color: #003049;
+    color: white;
+}
+
+.about p {
+    color: #8d99ae;
+}
+
+.logo-text {
+    font-size: 4.5rem;
+    font-weight: bold;
+    color: #ffbe0b;
+}
+
+.logo-text ~ span {
+    color: #fff;
+}
+
+footer .contact i {
+    font-size: 30px;
+    padding: 10px;
+}
+
+.socials a {
+    margin: 10px;
+    text-decoration: none;
+    font-size: 30px;
+    color: #fcbf49;
+}
+
+.contact a {
+    text-decoration: none;
+    color: #0077b6;
+    font-size: 30px;
+}
+
+.contact {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    font-size: 1.5rem;
+    margin-bottom: 10px;
+}
+.socials {
+    margin-bottom: 10px;
+}
+
+@media(min-width: 675px){
+    nav {
+        flex-direction: row;
+        justify-content: space-around;
+    }
+    .li-nav-items {
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-around;
+        margin-right: 20px;
+    }
+
+    nav ul li {
+        padding: 10px;
+    }
+
+    main {
+        width: 70%;
+    }
+    aside {
+        width: 30%;
+    }
+
+    .container-flex {
+        flex-direction: row;
+    }
+}
