--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -82,10 +82,6 @@ header {
     padding: 10px;
 }
 
-.header-content p {
-    color: #14213d;
-}
-
 .header-content a {
     border: 1px solid #333;
     padding: 15px 20px;
@@ -183,10 +179,13 @@ footer {
     color: white;
 }
 
-.about h1, p {
+footer p {
     color: #8d99ae;
     text-align: center;
+}
 
+footer h1 {
+    text-align: center;
 }
 
 .logo-text {
