--- a/assets/css/refroot-style.css
+++ b/assets/css/refroot-style.css
@@ -28,7 +28,7 @@ a:link {
 
 .mask {
     border-radius: 10px;
-    box-shadow: 1px 2px 20px #198754 inset;
+    box-shadow: 1px 2px 20px gold inset;
 }
 
 .nav-item-last a:hover {
@@ -43,6 +43,9 @@ a:link {
 .header-content1 {
     min-height: 80vh;
     background: url("https://cdn.pixabay.com/photo/2017/07/02/16/33/church-2464899_960_720.jpg");
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
     padding: 10px;
     box-shadow: 2px 5px 30px gold inset;
@@ -51,6 +54,9 @@ a:link {
 .header-content2 {
     min-height: 80vh;
     background: url("https://cdn.pixabay.com/photo/2020/05/24/23/33/hand-5216581_960_720.jpg");
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
     padding: 10px;
     box-shadow: 2px 5px 30px gold inset;
@@ -62,4 +68,10 @@ a:link {
 
 .container-fluid {
     background-color: rgba(0, 0, 0, 0.2);
+}
+
+.card-img-top {
+    width: 100%;
+    height: 50%;
+    object-fit: cover;
 }
