added some more style

--- a/assets/css/refroot-style.css
+++ b/assets/css/refroot-style.css
@@ -75,3 +75,8 @@ a:link {
     height: 50%;
     object-fit: cover;
 }
+
+.dropdown-menu a:active {
+    color:#198754;
+    background-color: gold;
+}
