edited all pages, added events page

--- a/assets/css/refroot-style.css
+++ b/assets/css/refroot-style.css
@@ -62,6 +62,16 @@ a:link {
     box-shadow: 2px 5px 30px gold inset;
 }
 
+.header-content3 {
+    min-height: 80vh;
+    background: url("https://cdn.pixabay.com/photo/2019/04/15/12/26/church-4129240_960_720.jpg");
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 10px;
+}
+
 .list-unstyled a:hover, .form-outline, .form-check-label {
     font-weight: bold;
 }
